tests/grammar/ansi-92/table-references.test
# Normal table with no alias
>SELECT * FROM t1
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: t1>
# Normal table with an alias using AS keyword
>SELECT * FROM t1 AS t1_alias
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: t1 AS t1_alias>
# Normal table with an alias NOT using AS keyword
>SELECT * FROM t1 t1_alias
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: t1 AS t1_alias>
# Derived table with name using AS keyword
>SELECT * FROM (SELECT a, b FROM t1) AS t
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: <derived table> AS t>
# CROSS JOIN missing required JOIN symbol
>SELECT * FROM t1 CROSS t2
Syntax error.
Expected to find JOIN but found identifier[t2]
SELECT * FROM t1 CROSS t2
                      ^^^
# CROSS JOIN two normal tables
>SELECT * FROM t1 CROSS JOIN t2
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: cross-join[t1,t2]>
# INNER JOIN two normal tables WITHOUT the INNER symbol
>SELECT * FROM t1 JOIN t2 ON t1.id = t2.t1_id
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: inner-join[t1,t2,column-reference[t1.id] = column-reference[t2.t1_id]]>
# INNER JOIN two normal tables WITH the INNER symbol
>SELECT * FROM t1 INNER JOIN t2 ON t1.id = t2.t1_id
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: inner-join[t1,t2,column-reference[t1.id] = column-reference[t2.t1_id]]>
# INNER JOIN two normal tables with no join condition
>SELECT * FROM t1 JOIN t2
OK
statements[0]:
  <statement: SELECT
   selected columns:
     0: *
   referenced tables:
     0: inner-join[t1,t2]>
